--- a/partials/portfolio.html
+++ b/partials/portfolio.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Portfolio</h2>
-                <h3 class="section-subheading text-muted">Explore my work in GitHub.</h3>
+                <h3 class="section-subheading text-muted">Explore my work on GitHub.</h3>
             </div>
         </div>
         <div class="row">
@@ -15,11 +15,11 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/about/nyu.jpg" class="img-responsive" alt="">
+                    <img ng-src="{{ repo.screenshot }}" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
-                    <h4 ng-bind="repo.description"></h4>
-                    <p class="text-muted" ng-bind="repo.name"></p>
+                    <h4 ng-bind="repo.name"></h4>
+                    <p class="text-muted" ng-bind="repo.description"></p>
                 </div>
             </div>
         </div>
@@ -38,12 +38,16 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
-                        <h2 id="portfolioModalTitle" ng-bind="selectedRepo.description"></h2>
-                        <p class="item-intro text-muted" ng-bind="selectedRepo.name"></p>
-                        <img class="img-responsive img-centered" src="img/about/nyu.jpg" alt="">
-                        <p><a ng-href="{{ selectedRepo.html_url }}">{{ selectedRepo.name }}</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                        <p>You can preview {{ selectedRepo.name }} <a ng-href="{{ selectedRepo.html_url }}">here</a>.</p>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>Close Project</button>
+                        <h2 id="portfolioModalTitle" ng-bind="selectedRepo.name"></h2>
+                        <p class="item-intro text-muted" ng-bind="selectedRepo.description"></p>
+                        <img class="img-responsive img-centered" ng-src="{{ selectedRepo.screenshot }}" alt="">
+                        <p ng-bind="selectedRepo.body"></p>
+                        <ul class="list-inline">
+                            <li>Demo: <a ng-href="{{ selectedRepo.homepage }}">{{ selectedRepo.homepage }}</a></li>
+                            <li>Source: <a ng-href="{{ selectedRepo.html_url }}">{{ selectedRepo.name }}</a></li>
+                        </ul>
+                        <p>Date: {{ selectedRepo.date }}</p>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                     </div>
                 </div>
             </div>
