--- a/css/app.less
+++ b/css/app.less
@@ -531,7 +531,7 @@ aside.clients {
 
 section#contact {
 	background-color: @gray-darkest;
-	background-image: url('../img/brooklyn_bridge.jpg');
+	background-image: url('../img/nyc.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	.section-heading {
@@ -663,7 +663,7 @@ ul.social-buttons {
 		}
 	}
     .close-modal {
-        position: absolute;
+        position: fixed;
         width:75px;
         height:75px;
         background-color:transparent;
