--- a/partials/music.html
+++ b/partials/music.html
@@ -2,19 +2,33 @@
 <section id="music">
     <div class="container">
         <div class="row">
+            <!-- Header -->
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Music</h2>
                 <h3 class="section-subheading text-muted">Enjoy this quick sample of tracks.</h3>
             </div>
         </div>
         <div class="row">
+            <!-- Youtube -->
             <div class="col-md-4 col-sm-6 portfolio-item" ng-repeat="song in songs">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" ng-src="{{ song.src }}"></iframe>
-                </div>                    
+                </div>
                 <div class="portfolio-caption">
                     <h4 ng-bind="song.artist"></h4>
                     <p class="text-muted" ng-bind="song.title"></p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Revo -->
+            <div class="col-lg-12">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/27449131"></iframe>
+                </div>
+                <div class="portfolio-caption">
+                    <h4>DJ REVOLUTION</h4>
+                    <p class="text-muted">Mixes</p>
                 </div>
             </div>
         </div>
