--- a/css/app.less
+++ b/css/app.less
@@ -500,31 +500,10 @@ section {
 	}
 }
 
-// Team Section
+// Music Section
 
-.team-member {
-	text-align: center;
-	margin-bottom: 50px;
-	img {
-		margin: 0 auto;
-		border: 7px solid white;
-	}
-	h4 {
-		margin-top: 25px;
-		margin-bottom: 0;
-		text-transform: none;
-	}
-	p {
-		margin-top: 0;
-	}
-}
-
-// Clients Aside
-
-aside.clients {
-	img {
-		margin: 50px auto;
-	}
+.carousel {
+	margin-bottom: 25px;
 }
 
 // Contact Section
