--- a/partials/music.html
+++ b/partials/music.html
@@ -21,6 +21,22 @@
             </div>
         </div>
         <div class="row">
+            <!-- Carousel -->
+            <div class="col-lg-12">
+                <carousel class="carousel" interval="0" no-wrap="false">
+                    <slide ng-repeat="song in songs">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" ng-src="{{ song.src }}"></iframe>
+                        </div>
+                        <div class="portfolio-caption">
+                            <h4 ng-bind="song.artist"></h4>
+                            <p class="text-muted" ng-bind="song.title"></p>
+                        </div>
+                    </slide>
+                </carousel>
+            </div>
+        </div>
+        <div class="row">
             <!-- Revo -->
             <div class="col-lg-12">
                 <div class="embed-responsive embed-responsive-16by9">
