--- a/partials/music.html
+++ b/partials/music.html
@@ -8,7 +8,7 @@
                 <h3 class="section-subheading text-muted">Enjoy this quick sample of tracks.</h3>
             </div>
         </div>
-        <div class="row">
+        <div id="youtube" class="row">
             <!-- Youtube -->
             <div class="col-md-4 col-sm-6 portfolio-item" ng-repeat="song in songs">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -20,10 +20,10 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div id="carousel" class="row">
             <!-- Carousel -->
             <div class="col-lg-12">
-                <carousel class="carousel" interval="0" no-wrap="false">
+                <carousel interval="0" no-wrap="false">
                     <slide ng-repeat="song in songs">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" ng-src="{{ song.src }}"></iframe>
@@ -36,7 +36,7 @@
                 </carousel>
             </div>
         </div>
-        <div class="row">
+        <div id="revolution" class="row">
             <!-- Revo -->
             <div class="col-lg-12">
                 <div class="embed-responsive embed-responsive-16by9">
