added profile img

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,9 @@
 <!-- Header -->
 <header>
     <div class="container">
+        <div class="profile-image">
+            <img class="img-circle img-responsive" src="img/little_pete.jpg" alt="Circa 7 years old." />
+        </div>
         <div class="intro-text">
             <div class="intro-lead-in">Welcome!</div>
             <div class="intro-heading">It's Nice To Meet You</div>
