--- a/css/app.less
+++ b/css/app.less
@@ -169,8 +169,15 @@ header {
 	.background-cover;
 	text-align: center;
 	color: white;
+    .profile-image {
+        width: 150px;
+        height: 150px;
+        margin: 80px auto 0px auto;
+        border-radius: 100%;
+        border: 4px solid @gray-lighter;
+    }
 	.intro-text {
-		padding-top: 100px;
+		padding-top: 30px;
 		padding-bottom: 50px;
 		.intro-lead-in {
 			.serif-font;
@@ -191,8 +198,14 @@ header {
 
 @media(min-width:768px) {
 	header {
+	    .profile-image {
+	        width: 300px;
+	        height: 300px;
+	        margin: 100px auto 0px auto;
+	        border: 7px solid @gray-lighter;
+	    }
 		.intro-text {
-			padding-top: 300px;
+			padding-top: 30px;
 			padding-bottom: 200px;
 			.intro-lead-in {
 				.serif-font;
