--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,14 +3,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; 2015 Peter Szocs.</span>
+                <span class="copyright">&copy; 2016 Peter Szocs</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="https://twitter.com/szocspeter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/pitanyc"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.facebook.com/szocs.peter"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/szocspeter"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/gepesz"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://github.com/pitanyc"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
             <div class="col-md-4" ng-if="isProd">
