--- a/partials/nav.html
+++ b/partials/nav.html
@@ -3,7 +3,7 @@
     <div class="container">
         <!-- Brand & responsive menu -->
         <div class="navbar-header">
-            <a class="navbar-brand page-scroll" scroll-on-click href="#top">Peter Szocs</a>
+            <a class="navbar-brand page-scroll" href="#top">Peter Szocs</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -15,10 +15,10 @@
         <!-- Nav links -->
         <div class="navbar-collapse collapse" aria-expanded="false">
             <ul class="nav navbar-nav navbar-right">
-                <li><a class="page-scroll" scroll-on-click href="#about">About</a></li>
-                <li><a class="page-scroll" scroll-on-click href="#portfolio">Portfolio</a></li>
-                <li><a class="page-scroll" scroll-on-click href="#music">Music</a></li>
-                <li><a class="page-scroll" scroll-on-click href="#contact">Contact</a></li>
+                <li><a class="page-scroll" href="#about">About</a></li>
+                <li><a class="page-scroll" href="#portfolio">Portfolio</a></li>
+                <li><a class="page-scroll" href="#music">Music</a></li>
+                <li><a class="page-scroll" href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
