--- a/partials/header.html
+++ b/partials/header.html
@@ -7,7 +7,7 @@
         <div class="intro-text">
             <div class="intro-lead-in">Welcome!</div>
             <div class="intro-heading">It's Nice To Meet You</div>
-            <a class="btn btn-xl page-scroll" scroll-on-click href="#about">About Me</a>
+            <a class="btn btn-xl page-scroll" href="#about">About Me</a>
         </div>
     </div>
 </header>
