--- a/partials/music.html
+++ b/partials/music.html
@@ -37,15 +37,19 @@
             </div>
         </div>
         <div id="revolution" class="row">
-            <!-- Revo -->
+            <!-- Soundcloud -->
             <div class="col-lg-12">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/27449131"></iframe>
-                </div>
-                <div class="portfolio-caption">
-                    <h4>DJ REVOLUTION</h4>
-                    <p class="text-muted">Mixes</p>
-                </div>
+                <carousel interval="0" no-wrap="false">
+                    <slide ng-repeat="soundcloud in soundclouds">
+                        <div class="embed-responsive embed-responsive-16by9" width="100">
+                            <iframe class="embed-responsive-item" ng-src="{{ soundcloud.src }}"></iframe>
+                        </div>
+                        <div class="portfolio-caption">
+                            <h4 ng-bind="soundcloud.artist"></h4>
+                            <p class="text-muted" ng-bind="soundcloud.title"></p>
+                        </div>
+                    </slide>
+                </carousel>
             </div>
         </div>
     </div>
