--- a/src/client/partials/about.html
+++ b/src/client/partials/about.html
@@ -12,7 +12,7 @@
                 <ul class="timeline">
                     <li ng-repeat="achievement in achievements" ng-class-even="'timeline-inverted'">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" ng-src="img/about/{{ achievement.imgUrl }}" alt="{{ achievement.imgAlt }}" />
+                            <img class="img-circle img-responsive" ng-src="images/about/{{ achievement.imgUrl }}" alt="{{ achievement.imgAlt }}" />
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
