--- a/src/client/partials/header.html
+++ b/src/client/partials/header.html
@@ -2,7 +2,7 @@
 <header>
     <div class="container">
         <div class="profile-image">
-            <img class="img-circle img-responsive" src="img/little_pete.jpg" alt="Circa 7 years old." />
+            <img class="img-circle img-responsive" src="images/little_pete.jpg" alt="Circa 7 years old." />
         </div>
         <div class="intro-text">
             <div class="intro-lead-in">Welcome!</div>
