--- a/src/client/stylesheets/app.less
+++ b/src/client/stylesheets/app.less
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background-image: url('../img/miami.jpg');
+	background-image: url('../images/miami.jpg');
 	background-repeat: none;
 	background-attachment: scroll;
 	background-position: center center;
@@ -546,7 +546,7 @@ div#revolution {
 
 section#contact {
 	background-color: @gray-darkest;
-	background-image: url('../img/nyc.jpg');
+	background-image: url('../images/nyc.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	.section-heading {
