added firebase svc

--- a/src/client/partials/footer.html
+++ b/src/client/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">&copy; <span>{{ date | date:'yyyy' }}</span> Peter Szocs</span>
+                <span class="copyright">&copy; <span>{{ now | date:'yyyy' }}</span> Peter Szocs</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
