--- a/src/client/partials/footer.html
+++ b/src/client/partials/footer.html
@@ -7,10 +7,10 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="https://github.com/pitanyc"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://www.facebook.com/szocs.peter"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/szocspeter"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://twitter.com/pitanyc"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://github.com/pitanyc" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://medium.com/@pitanyc" target="_blank"><i class="fa fa-medium"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/szocspeter" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://twitter.com/pitanyc" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 </ul>
             </div>
             <div class="col-md-4" ng-if="isProd">
